; ModuleID = '/home/carl/AnghaBench/masscan/src/extr_ranges6.c_range6list_remove_all.c'
source_filename = "/home/carl/AnghaBench/masscan/src/extr_ranges6.c_range6list_remove_all.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Range6List = type { i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @range6list_remove_all(%struct.Range6List* %0) #0 {
  %2 = alloca %struct.Range6List*, align 8
  store %struct.Range6List* %0, %struct.Range6List** %2, align 8
  %3 = load %struct.Range6List*, %struct.Range6List** %2, align 8
  %4 = getelementptr inbounds %struct.Range6List, %struct.Range6List* %3, i32 0, i32 1
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load %struct.Range6List*, %struct.Range6List** %2, align 8
  %9 = getelementptr inbounds %struct.Range6List, %struct.Range6List* %8, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = call i32 @free(i64 %10)
  br label %12

12:                                               ; preds = %7, %1
  %13 = load %struct.Range6List*, %struct.Range6List** %2, align 8
  %14 = getelementptr inbounds %struct.Range6List, %struct.Range6List* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %22

17:                                               ; preds = %12
  %18 = load %struct.Range6List*, %struct.Range6List** %2, align 8
  %19 = getelementptr inbounds %struct.Range6List, %struct.Range6List* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = call i32 @free(i64 %20)
  br label %22

22:                                               ; preds = %17, %12
  %23 = load %struct.Range6List*, %struct.Range6List** %2, align 8
  %24 = call i32 @memset(%struct.Range6List* %23, i32 0, i32 16)
  ret void
}

declare dso_local i32 @free(i64) #1

declare dso_local i32 @memset(%struct.Range6List*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
